fix: Minor layout bug fixes

--- a/src/components/molecule/projectCard/index.module.css
+++ b/src/components/molecule/projectCard/index.module.css
@@ -26,8 +26,6 @@
 
 .image {
   width: 100%;
-  min-width: 100%;
-  aspect-ratio: 1/1;
 }
 
 @media only screen and (min-width: 1025px) {
